<resources>
    <string name="app_name">Test App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Zugang für alle</string>
    <string name="nav_header_subtitle">access-for-all.ch</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="country">Country</string>
    <string name="capital">Capital</string>
    <string name="language">Language</string>
    <string name="italy">Italy</string>
    <string name="rom">Rom</string>
    <string name="italian">Italian</string>
    <string name="switzerland">Switzerland</string>
    <string name="berne">Berne</string>
    <string name="german">German</string>
    <string name="england">England</string>
    <string name="london">London</string>
    <string name="english">English</string>
    <string name="lead_1">The following table isn\'t accessible.</string>
    <string name="poblem_description">TalkBack will only read the content of each cell.</string>
    <string name="country_switzerland">Country, Switzerland</string>
    <string name="capital_berne">Capital, Berne</string>
    <string name="language_german">Language, German</string>
    <string name="country_italy">Country, Italy</string>
    <string name="capital_rom">Capital, Rom</string>
    <string name="language_italian">Language, Italian</string>
    <string name="country_england">Country, England</string>
    <string name="capital_london">Capital, London</string>
    <string name="language_english">Language, English</string>
    <string name="solution_description">Now TalkBack reads the table headers correct</string>

    <string name="help">get help</string>
    <string name="Test">Test</string>
    <string name="Welcome">Welcome to Accessibility</string>
    <string name="welcome">Welcome to Accessibility Demo</string>

</resources>
